<resources>
    <string name="app_name">VehicleBazzar</string>
    <string name="register_txt">Don\'t have an account?</string>
    <string name="login_txt">Already have an account?</string>
    <string name="hint_email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_passsword">Forgot password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_login">Back to Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="aggrement">I accept Terms and Conditions.</string>
    <string name="register">Register</string>
    <string name="emailaddress">Email Address</string>
    <string name="login">Login</string>
    <string name="register_txt_link">Register</string>
    <string name="first_name">FIrst Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="aboutus">About Us</string>
    <string name="notification">Notification</string>
    <string name="add_post">Add Your Post</string>

    <string name="FCM_PREF">com.example.sumankhatiwada.vehiclebazzar.fcm_pref</string>
    <string name="FCM_TOKEN">com.example.sumankhatiwada.vehiclebazzar.fcm_token</string>

    <string name="about_us">

        <font size ="16"><b>About</b></font> \n \n

        We realize that you have lots of choices when leasing or buying an automobile and our desire is to ensure you
        have the best car buying experience. Therefore, considering the customer satisfaction to be the highest priority,
        Vehicle Bazaar, provides a platform to facilitate buyers and sellers to communicate more easily, to make the
        transaction. With the details about the vehicles that are available for sell, buyers can easily navigate through
        this app and buy vehicles from the specific sellers.
        \n \n
        The app comes up with lots of features, like the users can safely login and navigate through user-friendly
        dashboard, to get access of various features like home with featured vehicle, updating profile, notification services,
        so the user can be notified about the buy and sell.
        \n \n
        There are lots of future enhancements that are to be implemented, to make the app experience better for the users
        in the days to come. Hope you enjoy the application and support us.

    </string>
</resources>
